--- a/static/style/main.css
+++ b/static/style/main.css
@@ -1,3 +1,15 @@
+@keyframes pulse {
+from{opacity: 1;}
+  to{opacity: 0.2;}
+}
+
+@keyframes sunfire {
+from {box-shadow: 0px 0px 200px 20px #f5c91a;}
+  to {box-shadow: 0px 0px 300px 70px #f5c91a;}
+}
+
+
+
 html,body{
   height: 100%;
   width: 100%;
@@ -5,11 +17,17 @@ html,body{
 
 .eee{
   width: 10%;
+  position: absolute;
+  top: 50%;
+  left: 0;
+  margin-top: -100px;
 }
 #universe{
-  background: radial-gradient(#555,#000);
+  background: radial-gradient(#555,#212121,#000);
+  zoom:50%;
 }
 .stars{
+  animation: pulse 10s infinite alternate;
   background: url("http://www.clker.com/cliparts/Y/T/K/w/3/I/stars-md.png");
   width: 100%;
   height: 100%;
@@ -17,16 +35,50 @@ html,body{
   z-index: 2;
 }
 
+.moonOrbit{
+  border: solid 1px red;
+  width: 300px;
+  height: 300px;
+  position: absolute;
+  z-index: 4;
+  top: 50%;
+  left: -50px;
+  border-radius: 100%;
+  margin-top: -160px;
+}
+
+#moon{
+  height: 50px;
+  width: 50px;
+  background: radial-gradient(#ddd,#888);
+  border-radius: 100%;
+}
+
 .sun{
+  animation: sunfire 10s infinite alternate;
   position: absolute;
   z-index: 4;
   top: 50%;
   left: 50%;
-  margin-top: -150px;
-  margin-left: -150px;
+  margin-top: -200px;
+  margin-left: -200px;
   box-shadow: 0px 0px 200px 20px #f5c91a;
-  width: 300px;
-  height: 300px;
+  width: 400px;
+  height: 400px;
   border-radius: 100%;
   background: radial-gradient(#f5c313,#ec7e08);
+}
+
+.earthOrbit{
+  height: 1200px;
+  width: 2000px;
+  position: absolute;
+  z-index: 4;
+  top: 50%;
+  left: 50%;
+  border: 1px solid red;
+  border-radius: 100%;
+  margin-left: -1000px;
+  margin-top: -550px;
+
 }
