--- a/static/style/main.css
+++ b/static/style/main.css
@@ -1,6 +1,16 @@
+@-webkit-keyframes pulse {
+from{opacity: 1;-ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=100)";}
+  to{opacity: 0.2;-ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=20)";}
+}
+
 @keyframes pulse {
-from{opacity: 1;}
-  to{opacity: 0.2;}
+from{opacity: 1;-ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=100)";}
+  to{opacity: 0.2;-ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=20)";}
+}
+
+@-webkit-keyframes sunfire {
+from {box-shadow: 0px 0px 200px 20px #f5c91a;}
+  to {box-shadow: 0px 0px 300px 70px #f5c91a;}
 }
 
 @keyframes sunfire {
@@ -8,6 +18,15 @@ from {box-shadow: 0px 0px 200px 20px #f5c91a;}
   to {box-shadow: 0px 0px 300px 70px #f5c91a;}
 }
 
+@-webkit-keyframes spin {
+from {-webkit-transform: rotate(0);transform: rotate(0);}
+  to {-webkit-transform: rotate(360deg);transform: rotate(360deg);}
+}
+
+@keyframes spin {
+from {-webkit-transform: rotate(0);transform: rotate(0);}
+  to {-webkit-transform: rotate(360deg);transform: rotate(360deg);}
+}
 
 
 html,body{
@@ -21,13 +40,17 @@ html,body{
   top: 50%;
   left: 0;
   margin-top: -100px;
+    -webkit-animation: spin 20s linear infinite reverse;
+            animation: spin 20s linear infinite reverse;
 }
 #universe{
+  background: -webkit-radial-gradient(#555,#212121,#000);
   background: radial-gradient(#555,#212121,#000);
   zoom:50%;
 }
 .stars{
-  animation: pulse 10s infinite alternate;
+  -webkit-animation: pulse 10s infinite alternate;
+          animation: pulse 10s infinite alternate;
   background: url("http://www.clker.com/cliparts/Y/T/K/w/3/I/stars-md.png");
   width: 100%;
   height: 100%;
@@ -36,7 +59,8 @@ html,body{
 }
 
 .moonOrbit{
-  border: solid 1px red;
+    -webkit-animation: spin 6s linear infinite;
+            animation: spin 6s linear infinite;
   width: 300px;
   height: 300px;
   position: absolute;
@@ -50,12 +74,14 @@ html,body{
 #moon{
   height: 50px;
   width: 50px;
+  background: -webkit-radial-gradient(#ddd,#888);
   background: radial-gradient(#ddd,#888);
   border-radius: 100%;
 }
 
 .sun{
-  animation: sunfire 10s infinite alternate;
+  -webkit-animation: sunfire 10s infinite alternate;
+          animation: sunfire 10s infinite alternate;
   position: absolute;
   z-index: 4;
   top: 50%;
@@ -66,19 +92,30 @@ html,body{
   width: 400px;
   height: 400px;
   border-radius: 100%;
+  background: -webkit-radial-gradient(#f5c313,#ec7e08);
   background: radial-gradient(#f5c313,#ec7e08);
 }
 
 .earthOrbit{
-  height: 1200px;
-  width: 2000px;
+  -webkit-animation: spin 120s linear infinite;
+          animation: spin 120s linear infinite;
+  height: 1000px;
+  width: 1400px;
   position: absolute;
   z-index: 4;
   top: 50%;
   left: 50%;
-  border: 1px solid red;
   border-radius: 100%;
-  margin-left: -1000px;
-  margin-top: -550px;
+  margin-left: -700px;
+  margin-top: -450px;
 
+}
+.cred{
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  color:white;
+  font-size: 60px;
+  opacity: 0.2;
+  -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=20)";
 }
